[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/Flashlight/light.png" type="Texture" id=1]
[ext_resource path="res://Components/Flashlight/Flashlight.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.2 ),
"transitions": PoolRealArray( 1, 1.51572, 1.41421 ),
"update": 0,
"values": [ 0.0, 1.5, -1.5 ]
}

[node name="Flashlight" type="Node2D"]
rotation = 0.00403269
script = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -21.3221, -2.24109 )
texture = ExtResource( 1 )
offset = Vector2( 346.38, 4.48808 )
texture_scale = 1.8
energy = 2.0
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Ray1" type="RayCast2D" parent="."]
rotation = -1.57593
enabled = true
cast_to = Vector2( 0, 700 )

[node name="Ray2" type="RayCast2D" parent="."]
rotation = -1.7847
enabled = true
cast_to = Vector2( 0, 700 )

[node name="Ray3" type="RayCast2D" parent="."]
rotation = -1.37885
enabled = true
cast_to = Vector2( 0, 700 )
